---
source: crates/sui-prover/tests/integration.rs
assertion_line: 276
expression: output
---
Verification successful


== Generated Boogie Code ==
function {:inline} $42_quantifiers_complex_usage_invariant_expression$pure(_$t0: int, _$t1: int, _$t2: Vec (int), _$t3: Vec (int)) returns ($ret0: bool)
{
    (var $t5 := (_$t0 <= _$t1);
    (var $t6 := $1_vector_length'u8'(_$t2);
    (var $t7 := (_$t0 < $t6);
    (var $t8 := $1_vector_length'u8'(_$t3);
    (var $t9 := (_$t1 < $t8);
    (var $t10 := ReadVec(_$t2, _$t0);
    (var $t12 := ReadVec(_$t3, _$t1);
    (var $t13 := ($t10 > $t12);
    (var $t14 := false;
    (var $t4 := $t14;
    (var $t15 := false;
    (var $t4 := $t15;
    (var $t16 := false;
    (var $t4 := $t16;
    (var $t17 := (if $t9 then $t13 else $t4);
    $t17)))))))))))))))
}
